--- a/hosts.ini
+++ b/hosts.ini
@@ -1,3 +1,6 @@
 [wp_nodes]
-3.68.101.42 ansible_user=ec2-user
-3.69.45.212 ansible_user=ec2-user
+18.196.1.39 ansible_user=ec2-user
+18.193.43.30 ansible_user=ec2-user
+
+[load_balancer]
+18.194.186.235 ansible_user=ec2-user
